test_result_fixed_7.txt
============================= test session starts =============================
platform win32 -- Python 3.13.2, pytest-9.0.1, pluggy-1.6.0 -- C:\Users\Sarit\AppData\Local\Programs\Python\Python313\python.exe
cachedir: .pytest_cache
rootdir: D:\Graphology\Master Software\Eduecosystem\backend
configfile: pytest.ini
plugins: anyio-4.11.0, asyncio-1.3.0, cov-7.0.0
asyncio: mode=Mode.STRICT, debug=False, asyncio_default_fixture_loop_scope=None, asyncio_default_test_loop_scope=function
pytest : ERROR: found no collectors for 
D:\Graphology\Master Software\Eduecosystem\backend\te
sts\api\api_v1\test_sso_integration.py::test_sso_full
_flow
At line:1 char:1
+ pytest tests/api/api_v1/test_sso_integration.py::te
st_sso_full_flow - ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (ERROR:  
   found no...t_sso_full_flow:String) [], RemoteExc  
  eption
    + FullyQualifiedErrorId : NativeCommandError
 

collecting ... collected 0 items / 1 error

=================================== ERRORS ====================================
__________ ERROR collecting tests/api/api_v1/test_sso_integration.py __________
C:\Users\Sarit\AppData\Local\Programs\Python\Python313\Lib\site-packages\_pytest\python.py:507: in importtestmodule
    mod = import_path(
C:\Users\Sarit\AppData\Local\Programs\Python\Python313\Lib\site-packages\_pytest\pathlib.py:587: in import_path
    importlib.import_module(module_name)
C:\Users\Sarit\AppData\Local\Programs\Python\Python313\Lib\importlib\__init__.py:88: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1387: in _gcd_import
    ???
<frozen importlib._bootstrap>:1360: in _find_and_load
    ???
<frozen importlib._bootstrap>:1331: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:935: in _load_unlocked
    ???
C:\Users\Sarit\AppData\Local\Programs\Python\Python313\Lib\site-packages\_pytest\assertion\rewrite.py:188: in exec_module
    source_stat, co = _rewrite_test(fn, self.config)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
C:\Users\Sarit\AppData\Local\Programs\Python\Python313\Lib\site-packages\_pytest\assertion\rewrite.py:357: in _rewrite_test
    tree = ast.parse(source, filename=strfn)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
C:\Users\Sarit\AppData\Local\Programs\Python\Python313\Lib\ast.py:54: in parse
    return compile(source, filename, mode, flags,
E     File "D:\Graphology\Master Software\Eduecosystem\backend\tests\api\api_v1\test_sso_integration.py", line 1
E       print("Getting superuser headers...")
E   IndentationError: unexpected indent
============================== warnings summary ===============================
app\schemas\coupon.py:28
  D:\Graphology\Master Software\Eduecosystem\backend\app\schemas\coupon.py:28: PydanticDeprecatedSince20: Pydantic V1 style `@validator` validators are deprecated. You should migrate to Pydantic V2 style `@field_validator` validators, see the migration guide for more details. Deprecated in Pydantic V2.0 to be removed in V3.0. See Pydantic V2 Migration Guide at https://errors.pydantic.dev/2.12/migration/
    @validator('discount_type')

app\schemas\coupon.py:34
  D:\Graphology\Master Software\Eduecosystem\backend\app\schemas\coupon.py:34: PydanticDeprecatedSince20: Pydantic V1 style `@validator` validators are deprecated. You should migrate to Pydantic V2 style `@field_validator` validators, see the migration guide for more details. Deprecated in Pydantic V2.0 to be removed in V3.0. See Pydantic V2 Migration Guide at https://errors.pydantic.dev/2.12/migration/
    @validator('discount_value')

app\schemas\coupon.py:54
  D:\Graphology\Master Software\Eduecosystem\backend\app\schemas\coupon.py:54: PydanticDeprecatedSince20: Support for class-based `config` is deprecated, use ConfigDict instead. Deprecated in Pydantic V2.0 to be removed in V3.0. See Pydantic V2 Migration Guide at https://errors.pydantic.dev/2.12/migration/
    class Coupon(CouponBase):

-- Docs: https://docs.pytest.org/en/stable/how-to/capture-warnings.html
=========================== short test summary info ===========================
ERROR tests/api/api_v1/test_sso_integration.py
======================== 3 warnings, 1 error in 0.50s =========================
